--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
