--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@thednp/dommatrix": "^3.0.2",
     "ai": "^6.0.77",
     "autoprefixer": "^10.4.20",
+    "canvas": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
