--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lucide-react": "^0.544.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^2.4.5",
+    "pdf-parse": "1.1.1",
     "pdfjs-dist": "^5.4.624",
     "react": "^19",
     "react-day-picker": "8.10.1",
